ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podtato-head-ingress
  namespace: podtato-kubectl
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-staging
    external-dns.alpha.kubernetes.io/hostname: podtato-005.uas.on-clouds.at
spec:
  ingressClassName: nginx
  rules:
  - host: podtato-005.uas.on-clouds.at
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: podtato-head-frontend
            port:
              number: 80
  tls:
  - hosts:
      - podtato-005.uas.on-clouds.at
    secretName: podtato-head-tls
